--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,15 @@ body {
 .crystalGem {
     height: 125px;
     width: auto;
+    margin-top: 20px;
+    background-color: #8a8c8e;
 }
 
 .enemy {
     height: 400px;
     width: auto;
-    padding-top: 50px;
+    margin-top: 100px;
+    background-color: #8a8c8e;
 }
 
 .logo {
@@ -27,4 +30,10 @@ body {
 
 h3 {
     text-align: center;
+}
+
+.score {
+    background-color: #8a8c8e;
+    margin-top: 40px;
+    margin-left: 20px;
 }
